@@ -5,6 +5,6 @@
    work_dir = './'
    datatype = 'modulus'
    wann = '1-3,6'
-   nrzl = -48
-   nrzh =  48
+   r3min = -1.5
+   r3max =  1.5
  /
